scrollbar-fix

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,8 @@ body,
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    overflow: hidden;
+    
 }
 
 @tailwind base;
